# quantifty

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPER_GUIDE.md  FTMO_ARCHITECTURE.md  FTMO_DEPENDENCIES.md  FTMO_MIGRATION_REPORT.md  NIFTY_MIGRATION_REPORT.md  PROJECT_REVIEW_SUMMARY.md  README.md  entities.json  mempalace.yaml  pyproject.toml  requirements.txt
app_facade/: auth_facade.py  data_facade.py  ops_facade.py  options_facade.py
config/: credentials.template.json  market_universe.json  settings.py  zmq.json  zmq_test.json  zmq_test_2.json
core/: clock.py  events.py
docs/: ARCHITECTURE_DECISIONS.md  BREADTH_INFRASTRUCTURE.md  CHANGELOG_PLATFORM.md  CODEBASE_OVERVIEW.md  COMMODITY_TRADING_IMPLEMENTATION_SUMMARY.md  COMMODITY_TRADING_SYSTEM_PLAN.md  DATA_PIPELINE.md  DAYTYPE_CLASSIFIER.md  DRIVER_SPECIFICATION.md  EDGE_ANALYSIS.md  FTMO_CHALLENGE_SYSTEM.md  FTMO_LIVE_DATA_PIPELINE.md  FTMO_V2_IMPLEMENTATION_SUMMARY.md  HMM_REGIME_STRATEGY_REPORT.md  LOOPDRIVER_IMPLEMENTATION_PLAN.md  MCX_GOLD_OPTIONS_COMMODITY_INTEGRATION_REPORT.md  NIFTYSHIELD_IMPLEMENTATION.md  PHASE_4C_IMPLEMENTATION_PLAN.md  PHASE_F_STARTUP_GATE_PLAN.md  PLATFORM_CONSTITUTION.md  PLATFORM_INVENTORY.md  PROJECT_STATE.md  SESSION_BOOTSTRAP.md  SIGNAL_QUALITY_FILTERS_USAGE.md  SIGNAL_QUALITY_IMPLEMENTATION_SUMMARY.md  SIGNAL_QUALITY_PIPELINE_DESIGN.md  STOCK_DAYTYPE_CLASSIFIER.md  STRATEGY LAYOUT.md  STRATEGY_PROMOTION_LEDGER.md  STRATEGY_RESEARCH_LOG.md  SWEEP_CLASSIFIER_REPORT.md  TRADE_LEARNING_PROTOCOL_V1.md  V9_INTEGRATION_SUMMARY.md  V9_OPTIONS_INTEGRATION.md  ftmo_trading_plan.md  (+2 more)
(+813 files in other folders)
